# substrate-dex

node/: Cargo.toml
node/src/: command.rs  service.rs
pallets/token/: Cargo.toml
pallets/trade/: Cargo.toml
pallets/trade/src/: types.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: init.sh
